# Simple-RREF-Matrix-Calculator

./: CMakeLists.txt  README.md  ref.cbp  ref.depend  ref.layout
Headers/: r-ref.c
Sources/: gui.c
include/: gui.h  matrix_operations.h  r-ref.h
src/: matrix_operations.c
